# ashioto

./: README.md  package.xml  planner.py  setup.py
ashioto/: __init__.py  ashioto_main.py  simulator_main.py
ashioto/node/: __init__.py  ashioto_initialize.py  ashioto_node.py
ashioto/utils/: __init__.py
ashioto/utils/envs/: __init__.py  footsteps_planning_env.py
ashioto/utils/simulator/: __init__.py  transform.py
environment/: __init__.py
environment/envs/: __init__.py  footsteps_planning.py  footsteps_planning_env.py  footsteps_planning_withball_multigoal.py
environment/simulator/: simulator.py
openvino_model/: footsteps_planning_right.xml
