<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ashioto</name>
  <version>0.0.0</version>
  <description>A ROS2 package containing path planning using reinforcement learning</description>
  <maintainer email="binasyahdiba@gmail.com">usb</maintainer>
  <license>MIT License</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>gymnasium</depend>
  <depend>numpy</depend>
  <depend>stable_baselines3</depend>
  <depend>sb3-contrib</depend>
  <depend>pygame</depend>
  <depend>rl_zoo3</depend>
  <depend>sbx-rl</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
